@@ -3,6 +3,7 @@
 
 import gocept.amqparchive.reindex
 import mock
+import os.path
 import pkg_resources
 import unittest
 
@@ -11,13 +12,15 @@ class ReindexTest(unittest.TestCase):
 
     def test_reads_body_and_headers_from_file(self):
         with mock.patch('zope.component.getUtility') as getUtility:
+            directory = pkg_resources.resource_filename(
+                __name__, 'fixtures')
             gocept.amqparchive.reindex.reindex_file(
-                pkg_resources.resource_filename(
-                    __name__, 'fixtures/message.xml'))
+                os.path.join(directory, 'message.xml'), directory)
             elastic = getUtility()
         data = elastic.index.call_args[0][0]
         self.assertEqual('This is only a test.', data['data']['foo'])
         self.assertEqual('amqparchive', data['app_id'])
+        self.assertEqual('message.xml', data['path'])
 
     def test_reindexes_each_message_filtering_out_header_files(self):
         files = gocept.amqparchive.reindex.collect_message_files(
