@@ -4,7 +4,8 @@ Changelog
 1.2.5 (unreleased)
 ------------------
 
-- Nothing changed yet.
+- Fix bug in ``reindex_directory``: we need to index the path relativ to the
+  base directory, not the full filename.
 
 
 1.2.4 (2013-11-27)
